Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Type__c/fields/Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Adjustment__c</fullName>
    <label>Adjustment</label>
    <referenceTo>Adjustment__c</referenceTo>
    <relationshipLabel>Adjustment Types</relationshipLabel>
    <relationshipName>Adjustment_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>