Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Type__c/fields/Adjustment_Monthly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Monthly_Revenue__c</fullName>
    <formula>Adjustment__r.Adjustment_Type_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adjustment Monthly Revenue</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>