Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Type__c/fields/Amount_Branded__c.field-meta.xml
<CustomField>
    <fullName>Amount_Branded__c</fullName>
    <formula>Branded_Adjustment_Total__c *  Month_Revenue_Percent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount - Branded</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>