Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Type__c/fields/Remaining_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Adjustment__c</fullName>
    <formula>Amount__c -  Amount_Branded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Adjustment</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>