Sandbox/07-04-2025/force-app/main/default/objects/Adjustment_Type__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>33Across</fullName>
            </value>
            <value>
                <fullName>Digital Envoy</fullName>
            </value>
            <value>
                <fullName>ID Graph</fullName>
            </value>
            <value>
                <fullName>ShareThis</fullName>
            </value>
            <value>
                <fullName>TapAd</fullName>
            </value>
            <value>
                <fullName>Tech Cost</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other 2</fullName>
            </value>
            <value>
                <fullName>Other 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>